--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
-command: dosomething
-foo:
-  - bar
-  - baz
+AAPL:
+  - shares: -75.088
+    date: 11/27/2015
+  - shares: 75.088
+    date: 11/26/2015
