--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -1,8 +1,51 @@
 Dashboard:
   Pages:
-    - Home:
+    - name: Home
       path: /
       icon: dashboard
-    - Products:
+      config: dashboard/pages/home.yaml
+    - name: Products
       path: /products
       icon: shopping-cart
+      config: dashboard/pages/products.yaml
+    - name: Orders
+      path: /orders
+      icon: money
+      config: dashboard/pages/orders.yaml
+    - name: Settings
+      pafh: /settings
+      icon: cog
+      config:
+        rows:
+          - columns:
+            - size: md-6
+              content:
+                h1:
+                  text: Settings
+                  float: left
+            - size: md-6
+              content: null
+          - columns:
+            - size: md-6
+              offset: md-3
+              content:
+                form:
+                  - text:
+                    label: username
+                    placeholder: cookie.user.settings.username
+                  - text:
+                    label: password
+                    placeholder: null
+                  - radio:
+                    label: active
+                    options:
+                      - label: Yes
+                      - label: No
+                    match: cookie.user.settinga.active
+                  - image:
+                    label: profile picture
+                    placeholder: cookie.user.settings.profile_picture
+    - name: Specials
+      path: /specials
+      icon: null
+      config: dashboard/pages/specials.yaml
